[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "catleg"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
  "aiometer",
  "dynaconf",
  "httpx",
  "markdown-it-py[plugins]",
  "mdformat>=0.7.16",
  "more-itertools",
  "typer",
]

[project.optional-dependencies]
dev = [
  "mypy",
  "pre-commit",
  "pytest",
  "ruff",
  "tox",
]

[project.scripts]
catleg = "catleg.catleg:main"

[project.urls]
"Homepage" = "https://github.com/CatalaLang/catleg/"
"Bug Tracker" = "https://github.com/CatalaLang/catleg/issues"
